--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+}
+
+
 .container {
     text-align: center;
     line-height: 2;
@@ -11,7 +16,7 @@
 
 .content {
     display: inline-block;
-    text-align:left;
+    text-align: left;
 }
 
 
