--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,6 @@
     box-sizing: border-box;
 }
 
-body {
-    overflow-x: hidden;
-}
-
-
 .container {
     text-align: center;
     line-height: 2;
@@ -69,6 +64,7 @@ nav {
 @media screen and (max-width: 768px) {
     body {
         overflow-x: hidden;
+        max-width:100vw;
     }
 
     .nav-links {
